GEN-API-001[規約情報取得]の実装
