# internal/handler/params.go
@@ -1,5 +1,5 @@
 package handler
 
 const (
-	ParamPolicyId = "policy_id"
+	ParamPolicyType = "policy_type"
 )
